# gpg-pass

./: Makefile.in  README  configure.ac  get-password  set-password  setup.py
gpgpass/: __init__.py  get_password.py  gpgpass_config.py  main.py  set_password.py
python/: get-password  set-password
src/: Makefile.in  config.h.in  get-password.c  sha256.c  sha256.h
