dnl
dnl configure.ac -- autoconf template for gpg-pass
dnl

AC_INIT([gpg-pass], [1], [josh@bress.net])

AC_PREREQ(2.61)

AC_CONFIG_HEADER([src/config.h])

AC_PROG_CC
AC_PROG_CPP
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_HEADER_STDC

AC_SUBST(LIBS)
AC_SUBST(CFLAGS)
AC_SUBST(bindir)
AC_SUBST(prefix)
AC_SUBST(libdir)
AC_SUBST(exec_prefix)
AC_SUBST(datadir)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
